# underworld

./: .dockerignore  .env.development  .env.production  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  build_frontend.sh  build_public.sh  docker-compose.yml  fly.toml  index.html  package-lock.json  package.json
app/: .eslintrc.js  Cargo.toml  package-lock.json  package.json
app/src/: App.css  App.tsx  index.css  main.rs  main.tsx
app/src/api/: actions.ts  configuration.ts  current-game.ts  game.ts  path.ts  player.ts
app/src/components/: Action.module.css  Action.tsx  GameEventView.module.css
app/src/components/EffectsView/: EffectsView.tsx  styles.module.css
app/src/components/ExitView/: ExitView.module.css  ExitView.tsx  styles.module.css
app/src/components/FixturePositionView/: FixturePositionView.tsx  index.ts  styles.module.css
app/src/components/FixturePositionsView/: FixturePositionsView.tsx  index.ts  styles.module.css
app/src/components/GameEventView/: GameEventView.module.css  GameEventView.tsx
app/src/components/GameScreen/: GameScreen.module.css  GameScreen.tsx  styles.module.css
app/src/components/GetReadyScreen/: GetReadyScreen.tsx  index.ts  styles.module.css
app/src/components/Header/: Header.module.css  Header.tsx
app/src/components/NpcPositionView/: NpcPositionView.module.css  NpcPositionView.tsx  styles.module.css
app/src/components/NpcPositionView/NpcInventoryView/: NpcInventoryView.module.css  NpcInventoryView.tsx  styles.module.css
app/src/components/NpcPositionsView/: NpcPositionsView.tsx  index.ts  styles.module.css
app/src/components/OptionsScreen/: OptionsScreen.module.css  OptionsScreen.tsx
app/src/components/PlayerView/: PlayerView.module.css  PlayerView.tsx  styles.module.css
app/src/components/PlayerView/PlayerInventoryView/: PlayerInventoryView.module.css  PlayerInventoryView.tsx  styles.module.css
app/src/components/PlayerView/PlayerSpellMemoryView/: PlayerSpellMemoryView.module.css  PlayerSpellMemoryView.tsx  styles.module.css
app/src/components/RoomView/: RoomView.module.css  RoomView.tsx  styles.module.css
app/src/components/actions/: AttackNpcView.tsx  CastSpellOnNpcView.tsx  CastSpellOnPlayerView.tsx  ExitRoomView.module.css  ExitRoomView.tsx  InspectFixtureView.tsx  InspectNpcView.tsx  LookAtFixtureView.tsx  LookAtNpcView.tsx  LootFixtureView.tsx  LootNpcView.tsx  MovePlayerItemView.tsx  OpenFixtureHiddenCompartment.tsx  OpenFixtureView.tsx  UseItemOnPlayerView.tsx  index.ts  styles.module.css
app/src/generated-api/: runtime.ts
app/src/generated-api/.openapi-generator/: FILES
app/src/generated-api/apis/: GameActionsApi.ts  GamesApi.ts  NpcsApi.ts  PlayerCharactersApi.ts
app/src/generated-api/models/: ActionName.ts  Attack.ts  AttackNpc.ts  CastSpellOnNpc.ts  Character.ts  CharacterItem.ts  Consumable.ts  ConsumableEffectName.ts  Defense.ts  Effects.ts  EquipLocationTag.ts  EventName.ts  Exit.ts  ExitDescriptor.ts  ExitRoom.ts  FixtureInspected.ts  FixtureItem.ts  FixtureLooted.ts  FixturePosition.ts  FixturePositionDescriptor.ts  FixtureType.ts  FlavourText.ts  GameEvent.ts  GeneratePlayerCharacter.ts  GeneratedNpc.ts  GroupDescriptor.ts  HealingEffect.ts  Health.ts  Identifier.ts  InspectFixture.ts  InspectNpc.ts  Inventory.ts  Item.ts  ItemDescriptor.ts  ItemSold.ts  ItemType.ts  ItemUsed.ts  LearnSpellEffect.ts  LearnedSpell.ts  LifeModifier.ts  (+30 more)
app/src/screens/Game/: GameScreen.tsx
app/src/screens/GetReady/: GetReadyScreen.module.css
app/src/screens/Loading/: LoadingScreen.module.css
app/src/screens/Options/: OptionsScreen.module.css
app/src/themes/: ThemeWrapper.tsx
assets/: index-05664d66.js  index-1368a539.js  index-68fc34ee.js  index-69b2fe4c.js  index-6ce01ad5.js  index-6d22a010.js  index-800ff51f.js  index-8c7189b9.js  index-91ca7ed2.css  index-b9b78399.css  index-c2_o5Wk_.js  index-daf7b1ea.css  index-jFFiL8dy.css  index.07a544fe.js  index.115a098b.js  index.1165fabb.js  index.2a8e7546.js  index.2c8e8389.js  index.2d72ba06.css  index.32c99ed4.css  index.3768736d.js  index.4c826e37.css  index.5012c4b7.js  index.7fd753c3.js  index.8307d353.js  index.860c32fb.js  index.88147ee7.js  index.9154c8c9.js  index.b2419b1c.css  index.c190d640.css  index.c54140e1.js  index.ccf96e4f.js  index.e03151d9.js  index.e55bb827.js  index.e86f82f0.js  index.ead33f40.css  index.eafe837a.js  index.f10f1bb9.js  index.f97e0ee2.js  index.fbe898c0.css
book/: game.html  how_to_play.html  index.html
core/: Cargo.toml
core/src/components/: character.rs  inventory.rs
core/src/components/items/: item.rs  location_descriptor.rs
core/src/generators/: fixtures.rs  inventory.rs  players.rs  rooms.rs
core/src/generators/rooms/: exits.rs  fixtures.rs
core/src/generators/utils/: item_descriptors.rs
core/src/handlers/: helpers.rs
core/src/systems/view/: room.rs
docs/: 404.html  game.html  how_to_play.html  index.html  player_characters.html  print.html
frontend/: .eslintrc.js  index.html  package-lock.json  package.json
migrations/: 20220826050015_mail_tokens.sql  20220826050346_api_tokens.sql
public/: 404.html  (+37 more)
(+471 files in other folders)
