[package]
name = "underworld_server"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "c216ea61479ad78e4a465dc75819b5b87c6d6654", features = ["serialization", "openapi"] }
# underworld_core = { path = "../underworld_core", features = ["serialization", "openapi"] }
serde_json = { version = "1.0" }
rand = "0.8"
poem = { version = "1.3", features = ["static-files"] }
poem-openapi = { version = "2.0", features = ["swagger-ui"]}
tokio = { version = "1.19", features = ["rt-multi-thread"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
