[package]
name = "underworld_server"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
poem = { version = "1.3", features = ["static-files", "cookie", "session"] }
poem-openapi = { version = "2.0", features = ["swagger-ui"]}
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "chrono" ] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tokio = { version = "1.20", features = ["rt-multi-thread"] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }
underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "69fb89f09e7953e3edc1178f5c138ed1d02c6a87", features = ["serialization", "openapi"] }
# underworld_core = { path = "../underworld_core", features = ["serialization", "openapi"] }
