[package]
name = "underworld_web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "ec73511b69e4bd1e9f772319f1f7b55e9d321355" }
getrandom = {version = "0.2.4", features= ["js"] }
