[package]
name = "underworld_web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
underworld_core = { git = "https://github.com/derrickp/underworld_core", rev = "ea12b848760d7dd8e7e6de5d1b6cc6c5a3b7e081" }
getrandom = {version = "0.2.6", features= ["js"] }
rand = "0.8.5"
