[package]
name = "underworld_core"
version = "0.6.3"
edition = "2021"
description = "Small library to either play a game or assist in generating rooms"
license = "MIT"
keywords = ["gamedev"]
readme = "README.md"
repository = "https://github.com/SpinningGoblin/underworld/tree/main/core"
exclude = ["/fixtures", "/.github", "/.vscode", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy_ecs = { version = "0.12", optional = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }
poem-openapi = { version = "3.0", optional = true }
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0"

[features]
bevy_components = ["bevy_ecs"]
serialization = ["serde"]
openapi = ["poem-openapi"]

[dev-dependencies]
serde_json = { version = "1.0" }
